--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,18 @@
 div .twitchlinks {
-  font-size: 15px;
-  padding: 5px 5px 5px 5px;
+  font-size: 14px;
+  padding: 2px 2px 2px 2px;
 }
 
 button {
   font-size: 12px;
+  margin-right: 10px;
 }
 
 iframe {
-  display: inline
+  float: left;
+  padding: 15px 15px 15px 15px
+}
+iframe .player{
+  float: left;
+  padding: 20px 20px 20px 20px;
 }
